fixing the layout breaking of the edit button on repeating sections by turning it in a flex box

--- a/TheElephantAndMacawBanner/the_elephant_and_macaw_banner.css
+++ b/TheElephantAndMacawBanner/the_elephant_and_macaw_banner.css
@@ -666,6 +666,8 @@ div.sheet-shadow-bottom-left::after {
 }
 
 .sheet-content-box {
+	display: flex;
+	flex-direction: column;
 	padding: 5px;
 }
 
